--- a/mandelbulber2/qt/preferences_dialog.ui
+++ b/mandelbulber2/qt/preferences_dialog.ui
@@ -36,7 +36,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tabGeneral">
       <attribute name="icon">
@@ -56,9 +56,9 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-144</y>
-            <width>570</width>
-            <height>860</height>
+            <y>0</y>
+            <width>588</width>
+            <height>743</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_general">
@@ -316,7 +316,7 @@
                   </property>
                  </widget>
                 </item>
-                <item row="5" column="0" colspan="2">
+                <item row="6" column="0" colspan="2">
                  <widget class="MyGroupBox" name="groupCheck_ui_colorize">
                   <property name="title">
                    <string>Colorize group&amp;Boxes</string>
@@ -362,6 +362,13 @@
                     </layout>
                    </item>
                   </layout>
+                 </widget>
+                </item>
+                <item row="5" column="0" colspan="2">
+                 <widget class="MyCheckBox" name="checkBox_display_tooltips">
+                  <property name="text">
+                   <string>Display tooltips</string>
+                  </property>
                  </widget>
                 </item>
                </layout>
@@ -595,8 +602,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>584</width>
-            <height>716</height>
+            <width>588</width>
+            <height>743</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_image">
@@ -785,7 +792,7 @@
              <item>
               <widget class="MyGroupBox" name="groupCheck_optional_image_channels_enabled">
                <property name="title">
-                <string>Optional Image Channels</string>
+                <string>Op&amp;tional Image Channels</string>
                </property>
                <property name="checkable">
                 <bool>true</bool>
@@ -1146,8 +1153,8 @@ and will only be present after enabling and re-render.</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>570</width>
-            <height>950</height>
+            <width>251</width>
+            <height>912</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_OpenCL">
