--- a/mandelbulber2/formula/ui/transf_abs_add_tglad_fold.ui
+++ b/mandelbulber2/formula/ui/transf_abs_add_tglad_fold.ui
@@ -541,7 +541,7 @@ z = abs( z + constant) - abs( z - constant) - z;</string>
       <item>
        <widget class="QLabel" name="label_information_general">
         <property name="text">
-         <string notr="true">&lt;p&gt;abs add tglad fold,  z = abs( z + constant) - abs( z - constant) - z:&lt;br&gt;with a fold tweak option&lt;br&gt;This formula contains aux.color&lt;/p&gt;&lt;table&gt;
+         <string notr="true">&lt;p&gt;abs add tglad fold,  z = fabs( z + constant) -fabs( z - constant) - z:&lt;br&gt;with a fold tweak option&lt;br&gt;This formula contains aux.color&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
 &lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/Caves-PseudoKleinianMod2.fract&lt;br&gt;Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/Caves2-PseudoKleinianMod2.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
