Added dIFS function in combobox on Rendering engine tab. Now it is possible to force dIFS distance function in hybrid mode.

--- a/mandelbulber2/qt/dock_rendering_engine.ui
+++ b/mandelbulber2/qt/dock_rendering_engine.ui
@@ -329,6 +329,11 @@ function:</string>
             <string>JosKleinian</string>
            </property>
           </item>
+          <item>
+           <property name="text">
+            <string>dIFS</string>
+           </property>
+          </item>
          </widget>
         </item>
         <item row="3" column="1" colspan="2">
