riemann_sphere_hobold_icons add miissing enable to smooth mandelbox remove unused code menger smooth

--- a/mandelbulber2/formula/ui/riemann_sphere_hobold_pow4.ui
+++ b/mandelbulber2/formula/ui/riemann_sphere_hobold_pow4.ui
@@ -56,9 +56,16 @@
     </widget>
    </item>
    <item>
+    <widget class="QLabel" name="label_258">
+     <property name="text">
+      <string>Analytic DE loses detail</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QLabel" name="label_257">
      <property name="text">
-      <string>Normal range of scale is 0.7 to 1.0</string>
+      <string>Normal range of scale is 0.7 to 1.0 for DeltaDE</string>
      </property>
     </widget>
    </item>
